Modif link Need to back

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--DIV body-container-->
     <div id="body-container">
         <!--Need to come back !-->
-        <a href="../../integrations.html"><i class="fas fa-backspace"></i></a>
+        <a href="https://laurelenne.github.io/laurelenne.integrations.github.io/"><i class="fas fa-backspace"></i></a>
         <!--HEADER-->
         <header>
             <div id="container-box-title">
